--- a/10-usepopcorn/src/index.css
+++ b/10-usepopcorn/src/index.css
@@ -54,7 +54,7 @@ body {
   max-width: 42rem;
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
-  /* overflow: scroll; */
+  overflow: scroll;
   position: relative;
 }
 
@@ -338,6 +338,13 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+::-webkit-scrollbar {
+  display: none; /* Chrome Safari */
+}
+
+-ms-overflow-style: none; /* IE 10+ */
+scrollbar-width: none; /* Firefox */
 
 /*
 SPACING SYSTEM (px)
